Updated Extension Name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "abteilung/forum-website-catmenu",
+	"name": "abteilung/catmenu",
 	"type": "typo3-cms-extension",
 	"description": "TYPO3 extension which handles menus of forum-pfarrblatt.ch",
 	"homepage": "https://gitlab.com/abteilung-deploy/forum-website-catmenu.git",
