--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pits/catmenu",
+    "name": "abteilung/catmenu",
     "type": "typo3-cms-extension",
     "description": "Category Menu for Forum-Pfarrblatt",
     "homepage": "https://forum-pfarrblatt.ch",
